Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/Credited_On__c.field-meta.xml
<CustomField>
    <fullName>Credited_On__c</fullName>
    <label>Credited On</label>
    <type>DateTime</type>
</CustomField>