Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/IEP_Influencer__c.field-meta.xml
<CustomField>
    <fullName>IEP_Influencer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IEP Influencer</label>
    <referenceTo>iep_influencer__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>