Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/Owner_s_Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager_Email_Address__c</fullName>
    <label>Owner&apos;s Manager Email Address</label>
    <type>Email</type>
</CustomField>