Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/Point__c.field-meta.xml
<CustomField>
    <fullName>Point__c</fullName>
    <label>Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>