Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/Refund_ref__c.field-meta.xml
<CustomField>
    <fullName>Refund_ref__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund reference transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>