Partial_14Dec2021/force-app/main/default/objects/Transaction__c/fields/Transaction_reference__c.field-meta.xml
<CustomField>
    <fullName>Transaction_reference__c</fullName>
    <label>Transaction reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>