Partial_14Dec2021/force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IEP_Influencer__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Point__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Owner_s_Manager_Email_Address__c</field>
        <operation>equals</operation>
        <value>sushil.pandey@ashirvad.com</value>
    </filters>
    <label>All</label>
</ListView>